--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,32 +33,33 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.facebook.android:account-kit-sdk:4.+'
-
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.ss.bannerslider:bannerslider:2.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     implementation 'com.shuhart.stepview:stepview:1.4.0'
     implementation 'com.jaredrummler:material-spinner:1.3.1'
-
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
-    implementation 'com.karumi:dexter:5.0.0'
     implementation 'io.paperdb:paperdb:2.6'
-
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     implementation 'com.nex3z:notification-badge:1.0.2'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
-
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.szagurskii:patternedtextwatcher:0.5.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.braintreepayments.api:drop-in:3.7.1'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.karumi:dexter:6.0.0'
 }
